2007-07-12  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1751518]
	* include/mshtml.h (IHTMLDocument2): Correct spelling of put_URL, get_URL.

	[mingw-Bugs-1751565]
	* include/basetyps.h (IID); Guard with __IID_DEFINED__.

	[mingw-Bugs-1751595] 
	* include/exdisp.h (DWebBrowserEvents2): Remove undocumented STDDISP
	methods.

	Thanks to Yuji Kuwabara  <yujikuwabara at sf dot net>.

2007-07-10  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1750898]
	* include/mmsystem.h (MIXERCONTROL): Correct UNICODE mapping.
	Thanks to Yuji Kuwabara  <yujikuwabara at sf dot net>.

2007-07-09  Danny Smith  <dannysmith@users.sourceforge.net>

	[mingw-Bugs-1749305]
	* lib/kernel32.def (GetConsoleProcessList@8):  Add export. 

2007-07-02  Przemek Czerkas  <pczerkas@gmail.com>

	* include/shlobj.h: Add CSIDL_MYMUSIC and CSIDL_MYVIDEO.

2007-07-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/oaidl.h: Include windows.h and ole2.h,
	unless COM_NO_WINDOWS_H.

	[mingw-Bugs-1742130]
	* include/oaidl.h (struct tagVARIANT): Add union members
	LONGLONG  * pllVal and ULONGLONG * pullVal.

2007-07-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ws2tcpip.h (s6_addr32): Correct definition.
	Thanks to Alfred E. Heggestad <aeh at db dot org>

2007-05-23  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/secur32.def (InitSecurityInterfaceA, InitSecurityInterfaceW): Define.

	Thanks to Jim Marshall (jim dot marshall at wbemsolutions dot com) for
	supplying the information.

2007-05-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shellapi.h (NIN_POPUPOPEN, NIN_POPUPCLOSE): Define.

2007-04-22  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/shellapi.h (NOTIFYICONDATAA, NOTIFYICONDATAW): Updated to support
	Vista.

2007-04-20  Matthias Miller  <matthiasmiller@users.sourceforge.net>

	 * include/wincrypt.h (CRYPTPROTECT_PROMPTSTRUCT, CRYPTPROTECT_UI_FORBIDDEN,
	CRYPTPROTECT_LOCAL_MACHINE): Define.
